--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ToiletLog" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.ToiletLog" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#A52C07</item>
-        <item name="colorPrimaryVariant">#6A1E07</item>
+        <item name="colorPrimary">#B84420</item>
+        <item name="colorPrimaryVariant">#872B10</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">#F2C078</item>
