--- a/app/src/main/res/layout/main_menu_activity.xml
+++ b/app/src/main/res/layout/main_menu_activity.xml
@@ -50,6 +50,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Settings" />
+
+        <Button
+            android:id="@+id/btn_temp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="temp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
