--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -34,23 +34,6 @@
                 android:id="@+id/list_view"
                 tools:listitem="@layout/list_item"/>
 
-            <!--<ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:padding="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <TextView
-                    android:id="@+id/txt_list"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </ScrollView>-->
-
 
         </LinearLayout>
 
@@ -60,7 +43,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             app:layout_constraintEnd_toStartOf="@+id/toolbar"
-            app:menu="@menu/nav_menu" />
+            app:menu="@menu/nav_menu"
+            app:headerLayout="@layout/nav_header"/>
 
 
 
