--- a/app/src/main/res/layout/activity_new_item.xml
+++ b/app/src/main/res/layout/activity_new_item.xml
@@ -258,7 +258,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             app:layout_constraintEnd_toStartOf="@+id/toolbar"
-            app:menu="@menu/nav_menu" />
+            app:menu="@menu/nav_menu"
+            app:headerLayout="@layout/nav_header"/>
 
     </androidx.drawerlayout.widget.DrawerLayout>
 
