--- a/app/src/main/res/layout/main_menu_activity.xml
+++ b/app/src/main/res/layout/main_menu_activity.xml
@@ -51,11 +51,11 @@
             android:layout_height="wrap_content"
             android:text="Settings" />
 
-        <Button
-            android:id="@+id/btn_temp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="temp" />
+<!--        <Button-->
+<!--            android:id="@+id/btn_temp"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="temp" />-->
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
