--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -28,6 +28,26 @@
                     />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Sort by: "
+                    android:layout_gravity="center_vertical"
+                    android:textSize="20dp"/>
+
+                <Spinner
+                    android:layout_width="150dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/drop_down"
+                    android:textSize="20dp"/>
+            </LinearLayout>
+
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
