--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -11,4 +11,10 @@
         <item>Female</item>
         <item>Non-binary</item>
     </string-array>
+
+    <string-array name="drop_down_array">
+        <item>Date</item>
+        <item>Time</item>
+        <item>Size</item>
+    </string-array>
 </resources>
