--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#CCCCCC</color>
     <color name="colorPrimary">#97391C</color>
+    <color name="colorPrimaryLight">#FFF0BE78</color>
+    <color name="colorPrimaryLightVariant">#C5835F</color>
     <color name="colorPrimaryVariant">#78270F</color>
 </resources>
