Removing locations from map

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -154,16 +154,30 @@
                         android:layout_gravity="top|end"
                         />
 
-                    <TextView
-                        android:id="@+id/address_field"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:text="Address"
-                        android:textColor="@color/white"
-                        android:textSize="25sp"
-                        android:textStyle="bold"
-                        android:layout_gravity="center_horizontal"/>
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/address_field"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="20dp"
+                            android:text="Address"
+                            android:textColor="@color/white"
+                            android:textSize="25sp"
+                            android:textStyle="bold"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginBottom="10dp"/>
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="Remove"
+                            android:backgroundTint="@color/colorPrimaryLightVariant"
+                            android:elevation="10dp"
+                            android:id="@+id/btn_remove_location"/>
+                    </LinearLayout>
 
 
 
