--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -168,7 +168,9 @@
                             android:textSize="25sp"
                             android:textStyle="bold"
                             android:layout_gravity="center_horizontal"
-                            android:layout_marginBottom="10dp"/>
+                            android:layout_marginBottom="10dp"
+                            android:paddingHorizontal="30dp"
+                            android:gravity="center"/>
                         <Button
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
