--- a/app/src/main/res/layout/main_menu_activity.xml
+++ b/app/src/main/res/layout/main_menu_activity.xml
@@ -6,6 +6,42 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:id="@+id/menuBtnLayout1"
+        android:layout_width="192dp"
+        android:layout_height="252dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.803"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/menuTitle"
+        app:layout_constraintVertical_bias="0.796">
+
+        <Button
+            android:id="@+id/btn_addNew"
+            android:layout_width="120dp"
+            android:layout_height="72dp"
+            android:drawableTop="@drawable/add_ic"
+            android:text="Add new" />
+
+        <Button
+            android:id="@+id/btn_map"
+            android:layout_width="120dp"
+            android:layout_height="72dp"
+            android:drawableTop="@drawable/baseline_location_searching_24"
+            android:text="Map"
+
+            />
+
+        <!--        <Button-->
+        <!--            android:id="@+id/btn_temp"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:text="temp" />-->
+    </LinearLayout>
+
     <TextView
         android:id="@+id/menuTitle"
         android:layout_width="wrap_content"
@@ -21,47 +57,37 @@
         app:layout_constraintVertical_bias="0.188" />
 
     <LinearLayout
-        android:id="@+id/menuBtnLayout"
-        android:layout_width="368dp"
-        android:layout_height="270dp"
+        android:id="@+id/menuBtnLayout2"
+        android:layout_width="192dp"
+        android:layout_height="252dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintHorizontal_bias="0.205"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/menuTitle"
-        app:layout_constraintVertical_bias="0.802">
-
-        <Button
-            android:id="@+id/btn_addNew"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="Add new entry" />
+        app:layout_constraintVertical_bias="0.796">
 
         <Button
             android:id="@+id/btn_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="72dp"
+            android:drawableTop="@drawable/baseline_list_24"
             android:text="Daily log" />
 
         <Button
-            android:id="@+id/btn_map"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Map" />
-
-        <Button
             android:id="@+id/btn_settings"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="72dp"
+            android:drawableTop="@drawable/baseline_settings_24"
             android:text="Settings" />
 
         <!--        <Button-->
-<!--            android:id="@+id/btn_temp"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="temp" />-->
+        <!--            android:id="@+id/btn_temp"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:text="temp" />-->
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
