--- a/app/src/main/res/layout/main_menu_activity.xml
+++ b/app/src/main/res/layout/main_menu_activity.xml
@@ -6,88 +6,182 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
+
+
+
     <LinearLayout
-        android:id="@+id/menuBtnLayout1"
-        android:layout_width="192dp"
-        android:layout_height="252dp"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.803"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/menuTitle"
-        app:layout_constraintVertical_bias="0.796">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <Button
+        <ImageView
+            android:id="@+id/header_menu"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:src="@drawable/rectangle_round_bottom"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_weight="1"/>
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:rowCount="2"
+            android:columnCount="2"
+            android:layout_weight="3">
+
+            <LinearLayout
+                android:id="@+id/btn_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                android:layout_margin="5dp"
+                android:background="@drawable/rounded_rect"
+                android:orientation="vertical"
+                android:gravity="center"
+                >
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/baseline_list_24"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Entry list"
+                    android:textStyle="bold"
+                    android:textSize="25sp"
+                    android:textColor="@color/white"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/btn_analysis"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                android:layout_margin="5dp"
+                android:background="@drawable/rounded_rect"
+                android:orientation="vertical"
+                android:gravity="center"
+                >
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/baseline_list_24"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Analysis"
+                    android:textStyle="bold"
+                    android:textSize="25sp"
+                    android:textColor="@color/white"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/btn_map"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                android:layout_margin="5dp"
+                android:background="@drawable/rounded_rect"
+                android:orientation="vertical"
+                android:gravity="center"
+                >
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/baseline_location_searching_24"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Map"
+                    android:textStyle="bold"
+                    android:textSize="25sp"
+                    android:textColor="@color/white"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/btn_settings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                android:layout_margin="5dp"
+                android:background="@drawable/rounded_rect"
+                android:orientation="vertical"
+                android:gravity="center"
+                >
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/baseline_settings_24"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Settings"
+                    android:textStyle="bold"
+                    android:textSize="25sp"
+                    android:textColor="@color/white"/>
+            </LinearLayout>
+        </GridLayout>
+
+        <LinearLayout
             android:id="@+id/btn_addNew"
-            android:layout_width="120dp"
-            android:layout_height="72dp"
-            android:drawableTop="@drawable/add_ic"
-            android:text="Add new" />
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_gravity="fill"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_rect"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:clickable="true"
+            >
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/add_ic"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New entry"
+                android:textStyle="bold"
+                android:textSize="25sp"
+                android:textColor="@color/white"/>
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/btn_map"
-            android:layout_width="120dp"
-            android:layout_height="72dp"
-            android:drawableTop="@drawable/baseline_location_searching_24"
-            android:text="Map"
 
-            />
-
-        <!--        <Button-->
-        <!--            android:id="@+id/btn_temp"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:text="temp" />-->
     </LinearLayout>
 
     <TextView
         android:id="@+id/menuTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Welcome to Toilet Log,\n Username!"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.188" />
+        app:layout_constraintVertical_bias="0.15"
+        android:textColor="@color/white"
+        />
 
-    <LinearLayout
-        android:id="@+id/menuBtnLayout2"
-        android:layout_width="192dp"
-        android:layout_height="252dp"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.205"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/menuTitle"
-        app:layout_constraintVertical_bias="0.796">
 
-        <Button
-            android:id="@+id/btn_list"
-            android:layout_width="120dp"
-            android:layout_height="72dp"
-            android:drawableTop="@drawable/baseline_list_24"
-            android:text="Daily log" />
-
-        <Button
-            android:id="@+id/btn_settings"
-            android:layout_width="120dp"
-            android:layout_height="72dp"
-            android:drawableTop="@drawable/baseline_settings_24"
-            android:text="Settings" />
-
-        <!--        <Button-->
-        <!--            android:id="@+id/btn_temp"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:text="temp" />-->
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
