--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -60,14 +60,22 @@
 <!--                    </LinearLayout>-->
 
 
-                    <CalendarView
-                        android:id="@+id/calendarView"
+<!--                    <CalendarView-->
+<!--                        android:id="@+id/calendarView"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:background="@drawable/rectangle_round_bottom"-->
+<!--                        android:backgroundTint="@color/colorPrimaryLightVariant"-->
+
+<!--                        />-->
+
+                    <com.shrikanthravi.collapsiblecalendarview.widget.CollapsibleCalendar
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:id="@+id/calendarView"
                         android:background="@drawable/rectangle_round_bottom"
-                        android:backgroundTint="@color/colorPrimaryLightVariant"
-
-                        />
+                        android:backgroundTint="@color/colorPrimaryLightVariant">
+                    </com.shrikanthravi.collapsiblecalendarview.widget.CollapsibleCalendar>
 
                     <Button
                         android:id="@+id/showAll"
