fixed calenddar color

--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -73,8 +73,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/calendarView"
-                        android:background="@drawable/rectangle_round_bottom"
-                        android:backgroundTint="@color/colorPrimaryLightVariant">
+                        app:primaryColor="@color/colorPrimaryLightVariant">
                     </com.shrikanthravi.collapsiblecalendarview.widget.CollapsibleCalendar>
 
                     <Button
